feat: add crud operations for the Category model, updated corresponding templates. Add messages about successful operations

--- a/templates/digital_store/index.html
+++ b/templates/digital_store/index.html
@@ -4,4 +4,7 @@
   <p>Customers: {{ customer_amount }}</p>
   <p>Sellers: {{ seller_amount }}</p>
   <p>Products: {{ product_amount }}</p>
+  
+  <a href="{% url 'digital_store:category-list' %}">Category list</a><br>
+  
 {% endblock %}
