--- a/templates/digital_store/category_list.html
+++ b/templates/digital_store/category_list.html
@@ -1,12 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
+  <h1>Category list</h1>
+  <a href="{% url 'digital_store:category-create' %}">Category create</a><br>
   {% if category_list %}
     <ul>
       {% for category in category_list %}
         <li>
           <p><strong>{{ category.name }}</strong></p>
           <p class="text-muted">{{ category.description }}</p>
+          <a
+              href="{% url 'digital_store:category-update' pk=category.pk %}"
+              class="btn btn-secondary"
+          >
+            Update
+          </a>
+          <a
+              href="{% url 'digital_store:category-delete' pk=category.pk %}"
+              class="btn btn-danger"
+          >
+            Delete
+          </a>
         </li>
       {% endfor %}
     </ul>
