feat: add and update all templates associated with the Product model

--- a/templates/digital_store/category_list.html
+++ b/templates/digital_store/category_list.html
@@ -24,5 +24,7 @@
         </li>
       {% endfor %}
     </ul>
+  {% else %}
+    <p>No categories have been created yet!</p>
   {% endif %}
 {% endblock %}
