--- a/templates/digital_store/index.html
+++ b/templates/digital_store/index.html
@@ -6,5 +6,6 @@
   <p>Products: {{ product_amount }}</p>
   
   <a href="{% url 'digital_store:category-list' %}">Category list</a><br>
+  <a href="{% url 'digital_store:product-list' %}">Product list</a><br>
   
 {% endblock %}
