--- a/templates/digital_store/index.html
+++ b/templates/digital_store/index.html
@@ -7,5 +7,6 @@
   
   <a href="{% url 'digital_store:category-list' %}">Category list</a><br>
   <a href="{% url 'digital_store:product-list' %}">Product list</a><br>
+  <a href="{% url 'digital_store:cart-list' %}">Cart</a><br>
   
 {% endblock %}
