feat: add orders page and order view

--- a/templates/digital_store/index.html
+++ b/templates/digital_store/index.html
@@ -8,5 +8,6 @@
   <a href="{% url 'digital_store:category-list' %}">Category list</a><br>
   <a href="{% url 'digital_store:product-list' %}">Product list</a><br>
   <a href="{% url 'digital_store:cart-list' %}">Cart</a><br>
+  <a href="{% url 'digital_store:order-list' %}">Orders</a><br>
   
 {% endblock %}
