--- a/templates/digital_store/cart_view.html
+++ b/templates/digital_store/cart_view.html
@@ -22,7 +22,7 @@
       {% endfor %}
       <p>Total price: {{ total_price }}</p>
 
-      <form method="post" action="">
+      <form method="post" action="{% url 'digital_store:order-create' %}">
         {% csrf_token %}
         <button type="submit" class="btn btn-primary">Place an order</button>
       </form>
