--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
     <p style="color: red">Invalid credentials</p>
   {% endif %}
 
-  <form method="post" action="{% url 'login' %}">
+  <form method="post" action="{% url 'accounts:login' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Submit">
