--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load crispy_forms_filters %}
 
 {% block content %}
   <h1>Login</h1>
@@ -10,7 +10,7 @@
 
   <form method="post" action="{% url 'accounts:login' %}">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <input type="submit" value="Submit">
   </form>
 {% endblock %}
