fix: fix all templates. Add pagination for product list

--- a/templates/digital_store/cart_view.html
+++ b/templates/digital_store/cart_view.html
@@ -1,39 +1,6 @@
-{#{% extends "base.html" %}#}
-{##}
-{#{% block content %}#}
-{#  <h1>Shopping cart</h1>#}
-{#  {% if not cart_items %}#}
-{#    <p>You have not added any products!</p>#}
-{#  {% else %}#}
-{#    <ul>#}
-{#      {% for item in cart_items %}#}
-{#        <li>#}
-{#          <p>Product name: {{ item.product.name }}</p>#}
-{#          <p>Price: {{ item.product.price }}</p>#}
-{#          <p>Quantity: {{ item.quantity }}</p>#}
-{##}
-{#          <form method="post" action="{% url 'digital_store:cart-quantity-change' pk=item.product.pk %}">#}
-{#            {% csrf_token %}#}
-{#            <button type="submit" name="action" value="increase" class="btn btn-secondary">Add product</button>#}
-{#            <button type="submit" name="action" value="reduce" class="btn btn-secondary">Reduce product</button>#}
-{#          </form>#}
-{##}
-{#        </li>#}
-{#      {% endfor %}#}
-{#      <p>Total price: {{ total_price }}</p>#}
-{##}
-{#      <form method="post" action="{% url 'digital_store:order-create' %}">#}
-{#        {% csrf_token %}#}
-{#        <button type="submit" class="btn btn-primary">Place an order</button>#}
-{#      </form>#}
-{##}
-{#    </ul>#}
-{#  {% endif %}#}
-{#  <a href="{% url 'digital_store:index' %}">Home page</a>#}
-{#{% endblock %}#}
-
-
 {% extends "layouts/base.html" %}
+
+{% block title %} Shopping cart {% endblock %}
 
 {% block content %}
   <div class="d-flex">
@@ -81,7 +48,7 @@
   {% else %}
     <p>You have not added any products!</p>
   {% endif %}
-  <a href="{% url 'digital_store:index' %}" class="btn btn-secondary" type="button">
+  <a href="{% url "digital_store:index" %}" class="btn btn-secondary" type="button">
     Home page
   </a>
 {% endblock %}
