--- a/templates/digital_store/order_list.html
+++ b/templates/digital_store/order_list.html
@@ -1,5 +1,7 @@
 {% extends "layouts/base.html" %}
 
+{% block title %} Order list {% endblock %}
+
 {% block content %}
   <div class="d-flex">
     <h1>Order list</h1>
@@ -11,18 +13,20 @@
     {% for order in order_list %}
       <div class="col-12">
         <div class="card card-body border-0 shadow mb-4">
-          <h2 class="h5 mb-4">{{ order.order_date }}</h2>
+          <h2 class="h5 mb-4">Order date: {{ order.order_date }}</h2>
           <div class="d-flex align-items-center">
             <div class="file-field">
               <div class="d-md-block text-left">
-              
-                <div class="fw-normal text-dark mb-1">{{ order.status }}</div>
-                {% for product in order.products.all %}
-                <div class="fw-normal text-dark mb-1">
-                  {{ product.name }} x {{ order_product.quantity }}
-                </div>
-                {% endfor %}
+                <div class="fw-normal text-dark mb-1">Status: {{ order.get_status_display }}</div>
 
+                <div class="fw-normal text-dark mb-1">
+                  Your order:
+                  {% for order_product in order.order_items.all %}
+                    {{ order_product.product.name }}
+                    (x{{ order_product.quantity }}){% if not forloop.last %}, {% endif %}
+                  {% endfor %}
+                </div>
+              
               </div>
             </div>
           </div>
@@ -32,7 +36,7 @@
   {% else %}
     <p>No orders have been created yet!</p>
   {% endif %}
-    <a href="{% url 'digital_store:index' %}" class="btn btn-secondary" type="button">
-      Home page
-    </a>
+  <a href="{% url 'digital_store:index' %}" class="btn btn-secondary" type="button">
+    Home page
+  </a>
 {% endblock %}
