--- a/templates/digital_store/category_confirm_delete.html
+++ b/templates/digital_store/category_confirm_delete.html
@@ -1,5 +1,7 @@
 {% extends "layouts/base.html" %}
 
+{% block title %} Delete category {% endblock %}
+
 {% block content %}
 
   <div class="col-12">
