--- a/templates/digital_store/category_list.html
+++ b/templates/digital_store/category_list.html
@@ -1,5 +1,7 @@
 {% extends "layouts/base.html" %}
 
+{% block title %} Categories {% endblock %}
+
 {% block content %}
   <div class="d-flex justify-content-between align-items-center col-12">
     <h1>Product category list</h1>
@@ -47,4 +49,7 @@
   {% else %}
     <p>No categories have been created yet!</p>
   {% endif %}
+
+  {% include 'includes/footer.html' %}
+
 {% endblock %}
