--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,5 +1,7 @@
 {% extends "layouts/base.html" %}
 
+{% block title %} Logout {% endblock %}
+
 {% block content %}
   <p>Logged out!</p>
   <a href="{% url 'accounts:login'%}">Click here to login again.</a>
