fix template 'index.html', modified .env.sample

--- a/templates/digital_store/index.html
+++ b/templates/digital_store/index.html
@@ -132,7 +132,7 @@
             </svg>
           </div>
           <h3 class="fw-bolder">{{ product_amount }}</h3>
-          <p class="text-gray">number of sellers</p>
+          <p class="text-gray">number of products</p>
         </div>
       </div>
     </div>
