--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,10 +1,11 @@
+{% load query_transform %}
 {% if is_paginated %}
 <div class="card-footer px-3 border-0 d-flex flex-column flex-lg-row align-items-center justify-content-between">
   <nav aria-label="Page navigation example">
     <ul class="pagination mb-0">
       {% if page_obj.has_previous %}
       <li class="page-item">
-        <a href="?page={{ page_obj.previous_page_number }}" class="page-link">Previous</a>
+        <a href="?{% query_transform request page=page_obj.previous_page_number %}" class="page-link">Previous</a>
       </li>
       {% endif %}
       <li class="page-item active">
@@ -12,7 +13,7 @@
       </li>
       {% if page_obj.has_next %}
       <li class="page-item">
-        <a href="?page={{ page_obj.next_page_number }}" class="page-link">Next</a>
+        <a href="?{% query_transform request page=page_obj.next_page_number %}" class="page-link">Next</a>
       </li>
       {% endif %}
     </ul>
