fix: add try-except block to EmailService, fix the error where a new user was written to the database if an error occurred during registration, add notifications when an error occurs during registration and for account activation by email

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -20,6 +20,20 @@
                   Digital store - Sign IN
                 </h1>
                 <br/>
+                <p>
+                  {% if messages %}
+                    <ul class="messages list-unstyled">
+                      {% for message in messages %}
+                        <li class="alert alert-{{ message.tags }} alert-warning fade show" role="alert">
+                          {{ message }}
+                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </li>
+                      {% endfor %}
+                    </ul>
+                  {% else %}
+                    Add your credentials
+                  {% endif %}
+                </p>
               </div>
                 <!-- Form -->
               <form method="post" action="" class="mt-4" novalidate>
