--- a/templates/digital_store/order_list.html
+++ b/templates/digital_store/order_list.html
@@ -7,7 +7,7 @@
     <h1>Order list</h1>
   </div>
 
-  {% include 'includes/search_form.html' %}
+  {% include 'includes/search_form_with_filter.html' %}
 
   {% if order_list %}
     {% for order in order_list %}
