--- a/templates/digital_store/product_list.html
+++ b/templates/digital_store/product_list.html
@@ -10,7 +10,7 @@
     {% endif %}
   </div>
   
-  {% include "includes/search_form.html" %}
+  {% include "includes/search_form_with_filter.html" %}
 
   <div class="row g-4">
     {% if product_list %}
